--- a/src/General/css/theme.css
+++ b/src/General/css/theme.css
@@ -341,15 +341,8 @@ a .name {
 #selectrice li:not(:first-of-type) {
   border-top: 1px solid #{if Style.lightTheme then "rgba(0,0,0,0.05)" else "rgba(255,255,255,0.025)"};
 }
-#main-menu,
-#returnIcon,
-#sowIcon,
-#psaIcon,
-#slideNav,
-#img-controls,
-#catalog,
-#fappeTyme,
-.icon {
+.a-icon,
+#shortcuts .icon {
   #{unless Style.lightTheme then "<%= filter %>: url(\"#icons-filter\");" else ""}
 }
 .alternate-post-colors #threads > .thread:nth-of-type(2n+1),
