--- a/src/General/css/font-awesome.css
+++ b/src/General/css/font-awesome.css
@@ -38,8 +38,6 @@
   speak: none;
   font-size: 14px !important;
 }
-.icon,
-a.icon,
-a .icon {
+#shortcuts .icon {
   color: rgb(130,130,130) !important;
 }
