--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -385,8 +385,7 @@ th {
   right: 0;
 }
 .sidebar-location-right .shortcut {
-  align-self: flex-end;
-  -webkit-align-self: flex-end;
+  <%= align %>-self: flex-end;
 }
 .sidebar-location-left #shortcuts {
   left: 0;
@@ -2227,35 +2226,87 @@ article li {
   right: 0;
   z-index: 30;
   display: <%= flex %>;
-  <%= flex %>-direction: column;
+  <%= flex %>-direction: row;
+  background: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.5));
+}
+.gal-close {
+  position: fixed;
+  top: 10px;
+  left: 25px;
+  font-size: 20px;
 }
 .gal-viewport {
   display: <%= flex %>;
-  align-items: stretch;
+  <%= align %>-items: stretch;
   <%= flex %>-direction: row;
   <%= flex %>: 1 1 auto;
 }
 .gal-thumbnails {
-  <%= flex %>: 0 0 270px;
-  overflow-x: auto;
+  <%= flex %>: 0 0 150px;
+  overflow-y: auto;
+  display: <%= flex %>;
+  <%= flex %>-direction: column;
+  <%= align %>-items: flex-start;
+}
+.gal-thumbnails img {
+  max-width: 125px;
+  max-height: 125px;
+  height: auto;
+  width: auto;
+}
+.gal-thumbnails a {
+  <%= flex %>: 0 0 auto;
+  margin: 3px auto;
 }
 .gal-prev {
   order: 0;
-  <%= flex %>: 0 0 20px;
 }
 .gal-next {
   order: 2;
+}
+.gal-prev,
+.gal-next {
   <%= flex %>: 0 0 20px;
+  background-color: #000;
+  position: relative;
+  cursor: pointer;
+  opacity: 0.5;
+}
+.gal-prev:hover,
+.gal-next:hover {
+  opacity: 0.9;
+}
+.gal-prev::after,
+.gal-next::after {
+  position: absolute;
+  top: 50%;
+  right: 2px;
+  <%= transform %>: translateY(-50%)
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  content: "";
+}
+.gal-prev::after {
+  border-right: 15px solid #fff;
+}
+.gal-next::after {
+  border-left: 15px solid #fff;
 }
 .gal-image {
   order: 1;
   <%= flex %>: 1 0 auto;
   display: <%= flex %>;
-  align-items: center;
-  justify-content: center;
+  <%= align %>-items: flex-start;
+  <%= justify %>: space-around;
+  overflow: auto;
+  /* Flex > Non-Flex child max-width and overflow fix (Firefox only?) */
+  width: 1%;
+}
+.gal-image a {
+  margin: auto;
 }
 .gal-image img {
-  max-height: 100%;
   max-width: 100%;
 }
 /* Catalog */
