--- a/src/General/css/padding.pages.css
+++ b/src/General/css/padding.pages.css
@@ -1,16 +1,16 @@
 .fourchan-ss-navigation.index.pagination-sticky-top body::before,
 .fourchan-ss-navigation.index.pagination-top body::before {
-  top: #{Style.padding.pages.offsetHeight}px;
+  top: #{pageHeight}px;
 }
 .fourchan-ss-navigation.index.pagination-sticky-bottom body::before,
 .fourchan-ss-navigation.index.pagination-bottom body::before {
-  bottom: #{Style.padding.pages.offsetHeight}px;
+  bottom: #{pageHeight}px;
 }
 .index.pagination-sticky-top body,
 .index.pagination-top body {
-  padding-top: #{Style.padding.pages.offsetHeight + 1}px;
+  padding-top: #{pageHeight + 1}px;
 }
 .index.pagination-sticky-bottom body,
 .index.pagination-bottom body {
-  padding-bottom: #{Style.padding.pages.offsetHeight + 1}px;
+  padding-bottom: #{pageHeight + 1}px;
 }
