--- a/css/style.css
+++ b/css/style.css
@@ -959,3 +959,12 @@ a.hide-announcement {
 .entry input {
   margin: 0;
 }
+
+/* colored uid */
+
+.posteruid.painted  {
+  padding: 0 5px;
+  border-radius: 1em;
+  font-size: 0.8em;
+  cursor: pointer;
+}
