Lets not remove slideout navigation from the DOM if it's hidden

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -881,6 +881,9 @@ th {
   display: none;
   padding: 2px;
 }
+.slideout-navigation-hide #so-nav {
+  display: none;
+}
 .slideout-navigation-compact #boardNavDesktopFoot {
   word-spacing: 1px;
 }
