One day, I'll just rewrite the whole mascot code And then I'll just release it as its own script And then I'll break Appchan X into script modules And then, I'll look back And realize I've come full circle and returned to `ya4cie` <3 @aeosynth

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1818,6 +1818,8 @@ a:only-of-type > .remove {
   left: 0;
   right: 0;
   line-height: 0;
+}
+.click-to-toggle #mascot {
   cursor: pointer;
 }
 .mascot-position-above-post-form.post-form-style-fixed:not(.post-form-decorations) #mascot img {
