Load the index asap on page load.

--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,11 @@ a[href="javascript:;"] {
   overflow: hidden;
 }
 
+/* Index */
+:root.index-loading .board {
+  display: none;
+}
+
 /* Announcement Hiding */
 :root.hide-announcement #globalMessage,
 :root.hide-announcement-enabled #toggleMsgBtn {
