Build the pagelist dynamically.

--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,7 @@ a[href="javascript:;"] {
 
 /* Index */
 :root.index-loading .board,
+:root.index-loading .pagelist,
 :root.index-hide-pagelist .pagelist {
   display: none;
 }
